--- a/ejercicio_1/index.html
+++ b/ejercicio_1/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Ej1</a>
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-
+    <div class="container mt-3">
         <div class="row">
             <div class="col-6">
                 <div class="row">
@@ -67,6 +67,7 @@
             </div>
         </div>
 
+    </div>
 
 
 </body>
